# dicountOptimizer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_QUICK_START.md  DOCKER_QUICK_START.md  Dockerfile  FRONTEND_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  TEST_RESULTS_REAL_API.md  agent.py  app.py  cloudbuild.yaml  demo.py  demo_optimized_meals.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_complete_workflow_real_apis.py  test_google_maps.py  test_integration.py  test_real_api_integration.py  test_validator.py  verify_project.py
.github/: CICD_SETUP.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SECRETS_CHECKLIST.md
agents/: agent.py
docs/: API.md  ARCHITECTURE.md  CLOUD_RUN_DEPLOYMENT.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  TYPE_CHECKING_QUICK_REFERENCE.md
examples/: agent_composition_example.py  factory_usage_example.py
scripts/: deploy-production.sh  deploy-staging.sh  profile_performance.py  setup-gcp-infrastructure.sh  test-deployment.sh  type_check.sh
templates/: index.html
tests/: test_agent.py  test_agent_factory.py  test_agent_with_real_api.py  test_api.py  test_cache_repository.py  test_frontend.py  test_frontend_backend_integration.py  test_google_maps_comprehensive.py  test_google_maps_repository.py  test_ingredient_mapper_agent.py  test_integration_mocked.py  test_logging.py  test_meal_suggester_agent.py  test_output_formatter_agent.py  test_redis_cache_repository.py  (+3 more)
(+88 files in other folders)
