[project]
name = "shopping-optimizer"
version = "0.1.0"
description = "AI-powered shopping optimizer with Google ADK"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
strict_optional = true
warn_unreachable = true

# Allow gradual typing for existing code during migration
[[tool.mypy.overrides]]
module = "agents.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
